@@ -2,7 +2,6 @@
  * ASU Directory Module
  * Department Tree Display
  *
- * @author : Colton Testamarck (colt@asu.edu)
  *************************************************************************/
 
 .asu-directory-tree-hierarchy {
