@@ -137,7 +137,7 @@ function asu_isearch_get_migrate_source_urls($from_cache = FALSE) {
             $endpoint = ASU_ISEARCH_DIRECTORY_FEED_CACHE_ENDPOINT;
           }
           else {
-            $endpoint = ASU_ISEARCH_DIRECTORY_FEED_ENDPOINT;
+            $endpoint = ASU_DIR_UTILITIES_FEED_ENDPOINT;
           }
 
           $source_urls[$department_nid] = $endpoint . $department_nid;
@@ -149,7 +149,7 @@ function asu_isearch_get_migrate_source_urls($from_cache = FALSE) {
           $endpoint = ASU_ISEARCH_DIRECTORY_FEED_CACHE_ENDPOINT;
         }
         else {
-          $endpoint = ASU_ISEARCH_DIRECTORY_FEED_ENDPOINT;
+          $endpoint = ASU_DIR_UTILITIES_FEED_ENDPOINT;
         }
 
         $source_urls[$migrate_item->dept_nid] = $endpoint . $migrate_item->dept_nid;
